# tgdp_submission

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
config/: log_paths.yaml
config/baselines/ajay_dd/: defaults.yaml  root.yaml
config/baselines/janner_diffuser/: defaults.yaml  root.yaml
config/baselines/lu_dv/: defaults.yaml  root.yaml
config/experiments/classifier_free_guidance/: defaults.yaml  root.yaml
config/experiments/classifier_guidance/: defaults.yaml  root.yaml
config/experiments/monte_carlo_selection/: defaults.yaml  root.yaml
config/experiments/temperature_guided_diffusion/: defaults.yaml  root.yaml
scripts/baselines/: ajay_dd.py  janner_diffuser.py  lu_dv.py
scripts/experiments/: classifier_free_guidance.py  classifier_guidance.py  monte_carlo_selection.py  temperature_guided_diffusion.py  temperature_guided_diffusion_veteran.py
tgdp/: inpainting_conditioning.py  sigma_distributions.py
tgdp/agent/: __init__.py  base_agent.py  flat_agent.py
tgdp/datasets/: __init__.py  base_dataset.py  d4rl_dataset.py  normalizers.py
tgdp/datasets/datastore/: __init__.py  (+2 more)
tgdp/environments/: __init__.py  d4rl.py
tgdp/models/: losses.py  scaling.py
tgdp/networks/: ema_wrapper.py  embeddings.py
tgdp/rendering/: __init__.py  base_renderer.py  maze_renderer.py  mujoco_renderer.py  utils.py
tgdp/sampling/: __init__.py  base_sampler.py  ddim.py  ddpm.py  euler.py  heun.py  noise_schedulers.py
tgdp/training/: base_trainer.py  trainer.py
tgdp/utils/: configs.py  dict_buffer.py  extra_inputs.py
(+88 files in other folders)
